# spacktainers

./: .gitignore  .gitlab-ci.yml  AUTHORS.txt  LICENSE.txt  README.md  spack.yaml
.github/actions/build_container/: action.yaml
.github/workflows/: build-base-containers.yaml  build-spacktainers.yaml  matrix.json  no_build_warning.yaml  spacktainer-manual.yaml  spacktainer.yaml  spacktainers-sandbox.yaml  spacktainers-target-branch.yaml
builder/: Dockerfile  acfl.sh  spack.patch
cloud_infrastructure/: README.md
cloud_infrastructure/ansible/: ansible.cfg
cloud_infrastructure/keys/: hornbach.pub  spiegel.pub
cloud_infrastructure/terraform/: environment.tf  main.tf  variables.tf
cloud_infrastructure/terraform_mirror/: main.tf  repository.tf  variables.tf
container_definitions/_arm64/: cwl-registry.yaml
container_definitions/amd64/: ack.yaml  brainbuilder.yaml  brayns.yaml  connectome-manipulator.yaml  functionalizer.yaml  neurodamus-hippocampus.yaml  neurodamus-neocortex-coreneuron.yaml  neurodamus-neocortex-multiscale.yaml  neuron.yaml  nexus-storage.def  py-bbp-workflow.yaml  system-benchmarks.yaml
container_definitions/arm64/: neurodamus-neocortex.yaml
get_artifacts/: pyproject.toml
get_artifacts/src/get_artifacts/: __main__.py
job_creator/: pyproject.toml
runtime/: Dockerfile
singularitah/: Dockerfile  _s3cfg
spackah/: Dockerfile
spackitor/: README.md  pyproject.toml
spackitor/scripts/: purge_checksum.py  purge_dependents.py  purge_signatures.py  s3.py
spackitor/src/spackitor/: __init__.py  __main__.py
spackitor/tests/: test_unit.py
(+25 files in other folders)
