[build-system]
requires = ["setuptools"]
build_backend = "setuptools"

[project]
name = "spackitor"
description = "Spack janitor to clean the binary build cache"
version = "0.2.0"
authors = [ { name = "Erik Heeren", email = "erik.heeren@epfl.ch" } ]
dependencies = ["boto3", "click"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.10",
]

[project.optional-dependencies]
test = [
    "pytest",
    "coverage"
]

[project.scripts]
spackitor = "spackitor.__main__:clean_cache"
